RESOLVED FIXED280421
REGRESSION(283632@main): WKWebExtensionController API tests assert
https://bugs.webkit.org/show_bug.cgi?id=280421
Summary REGRESSION(283632@main): WKWebExtensionController API tests assert
Kimmo Kinnunen
Reported 2024-09-26 11:50:27 PDT
REGRESSION(283632@main): WKWebExtensionController API tests assert
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-26 11:50:56 PDT
Kimmo Kinnunen
Comment 2 2024-09-26 12:12:51 PDT
EWS
Comment 3 2024-09-27 08:24:40 PDT
Committed 284360@main (39fbf6d920ee): <https://commits.webkit.org/284360@main> Reviewed commits have been landed. Closing PR #34313 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.