REGRESSION(283632@main): WKWebExtensionController API tests assert https://bugs.webkit.org/show_bug.cgi?id=280421 rdar://136770150

Reviewed by Chris Dumez and Timothy Hatcher.

Before 283632@main, WebProcess would have manual IPC message handlers
which would log error and drop unhandled messages.

283632@main would use the normal generated IPC message handlers, where
unhandled messages cause asserts.

Add the log + drop logic back to WebProcess.
dispatchMessage is the last step of the normal IPC message handling
process, so AuxiliaryProcess will filter out unhandled messages
for WebProcess, just before the assertions.

* Source/WebKit/Shared/AuxiliaryProcess.cpp:
(WebKit::AuxiliaryProcess::dispatchMessage):
(WebKit::AuxiliaryProcess::filterUnhandledMessage):
* Source/WebKit/Shared/AuxiliaryProcess.h:
* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::dispatchMessage):
(WebKit::WebProcess::filterUnhandledMessage):
* Source/WebKit/WebProcess/WebProcess.h:

Canonical link: https://commits.webkit.org/284360@main